[gd_scene load_steps=10 format=3 uid="uid://bvbyb8jdqjcei"]

[ext_resource type="Script" uid="uid://tk3v0572hok5" path="res://scenes/ui/main_menu/main_menu.gd" id="1_bqqt6"]
[ext_resource type="PackedScene" uid="uid://d2i4w4joysljq" path="res://scenes/ui/components/button.tscn" id="1_ekxnf"]
[ext_resource type="PackedScene" uid="uid://bi3akamp77mgs" path="res://backend/request/request.tscn" id="3_7b55j"]
[ext_resource type="Texture2D" uid="uid://dfrnsnqu87dp6" path="res://assets/images/ui/maby.png" id="5_j7ex8"]
[ext_resource type="PackedScene" uid="uid://b0acshe7f14hg" path="res://scenes/ui/main_menu/play.tscn" id="6_52x6y"]
[ext_resource type="PackedScene" uid="uid://g63ms4dlkya7" path="res://scenes/ui/main_menu/components/tile_grid/tile_grid_ui.tscn" id="14_1ajci"]

[sub_resource type="GDScript" id="GDScript_5pajh"]
script/source = "extends Button


func _on_username_text_changed(new_text: String) -> void:
	pass # Replace with function body.
"

[sub_resource type="Shader" id="Shader_7b55j"]
code = "shader_type canvas_item;

uniform float lod: hint_range(0.0, 5) = 0.0;

void fragment(){
	vec4 color = texture(SCREEN_TEXTURE, SCREEN_UV, lod);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7b55j"]
shader = SubResource("Shader_7b55j")

[node name="MainMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_bqqt6")

[node name="Request" parent="." node_paths=PackedStringArray("refresh_button") instance=ExtResource("3_7b55j")]
unique_name_in_owner = true
refresh_button = NodePath("")

[node name="TileGridUi" parent="." instance=ExtResource("14_1ajci")]

[node name="HBoxContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
z_index = 50
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.5
offset_top = -81.0
offset_right = 80.5
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("5_j7ex8")

[node name="PlayButton" parent="HBoxContainer" instance=ExtResource("1_ekxnf")]
unique_name_in_owner = true
layout_mode = 2

[node name="TutorialButton" parent="HBoxContainer" instance=ExtResource("1_ekxnf")]
unique_name_in_owner = true
layout_mode = 2
text = "Tutorial
"
script = SubResource("GDScript_5pajh")

[node name="Quit" parent="HBoxContainer" instance=ExtResource("1_ekxnf")]
layout_mode = 2
text = "Quit"

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_7b55j")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.14, 0.1204, 0.1302, 0.615686)

[node name="Play" parent="." instance=ExtResource("6_52x6y")]
unique_name_in_owner = true
layout_mode = 1

[connection signal="pressed" from="HBoxContainer/PlayButton" to="." method="_on_play_pressed"]
[connection signal="pressed" from="HBoxContainer/TutorialButton" to="." method="_on_tutorial_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Quit" to="." method="_on_quit_pressed"]
