[gd_scene load_steps=19 format=3 uid="uid://b0acshe7f14hg"]

[ext_resource type="Texture2D" uid="uid://k2pm4cv4l84n" path="res://assets/images/ui/rect/leaderboard_card.png" id="1_ta0qg"]
[ext_resource type="PackedScene" uid="uid://d2i4w4joysljq" path="res://scenes/ui/components/button.tscn" id="2_mpe6q"]
[ext_resource type="Theme" uid="uid://db6861sl7f7rv" path="res://scenes/ui/main_menu/theme_small.tres" id="3_486ij"]
[ext_resource type="Texture2D" uid="uid://cqp5q5ic4y032" path="res://assets/images/ui/rect/close.png" id="4_w271k"]
[ext_resource type="Shader" uid="uid://dhrxdnevtv4vp" path="res://addons/shaker/components/vfx/shaders/outline2.gdshader" id="5_svpen"]
[ext_resource type="Theme" uid="uid://c06a0wpkb3qyr" path="res://resources/theme/theme.tres" id="6_s84bh"]
[ext_resource type="Texture2D" uid="uid://d1m076hphup2p" path="res://assets/images/ui/rect/refresh.png" id="7_ly4qf"]
[ext_resource type="PackedScene" uid="uid://bc11r74o1iibq" path="res://scenes/ui/main_menu/components/leaderboard_data_ui.tscn" id="8_i26w2"]
[ext_resource type="Texture2D" uid="uid://3tdc4o7fiqnb" path="res://assets/images/ui/rect/right_panel.png" id="9_ajgos"]
[ext_resource type="Material" uid="uid://ctsbqcehyf6ux" path="res://scenes/entities/action_pickable/action.tres" id="10_iwpgb"]
[ext_resource type="Texture2D" uid="uid://cncpqu3fcgw0s" path="res://assets/images/ui/rect/seed_input.png" id="11_8lv8c"]
[ext_resource type="Theme" uid="uid://udemsrc3pygt" path="res://scenes/ui/main_menu/theme_blue.tres" id="12_w8u45"]
[ext_resource type="Script" uid="uid://deuauwcgdmwli" path="res://scenes/ui/main_menu/components/play_seed_of_the_day.gd" id="13_cggyq"]
[ext_resource type="Script" uid="uid://tk3v0572hok5" path="res://scenes/ui/main_menu/main_menu.gd" id="14_rju5d"]

[sub_resource type="GDScript" id="GDScript_rcqid"]
script/source = "extends Control

func _ready():
	hide()
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5dd4i"]
shader = ExtResource("5_svpen")
shader_parameter/color = Color(0, 0, 0, 1)

[sub_resource type="FontVariation" id="FontVariation_7b55j"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_flqon"]

[node name="Play" type="Control"]
visible = false
z_index = 100
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = SubResource("GDScript_rcqid")

[node name="Container" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="Container"]
layout_mode = 2
alignment = 1

[node name="NinePatchRect" type="NinePatchRect" parent="Container/HBoxContainer"]
custom_minimum_size = Vector2(180, 152)
layout_mode = 2
texture = ExtResource("1_ta0qg")
patch_margin_left = 5
patch_margin_top = 2
patch_margin_right = 3
patch_margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Container/HBoxContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.38
offset_right = -2.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="Header" type="HBoxContainer" parent="Container/HBoxContainer/NinePatchRect/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" parent="Container/HBoxContainer/NinePatchRect/VBoxContainer/Header" instance=ExtResource("2_mpe6q")]
custom_minimum_size = Vector2(0, 0)
layout_mode = 2
theme = ExtResource("3_486ij")
theme_override_constants/icon_max_width = 0
text = ""
icon = ExtResource("4_w271k")

[node name="Label" type="Label" parent="Container/HBoxContainer/NinePatchRect/VBoxContainer/Header"]
material = SubResource("ShaderMaterial_5dd4i")
custom_minimum_size = Vector2(126.585, 0)
layout_mode = 2
theme = ExtResource("6_s84bh")
theme_override_fonts/font = SubResource("FontVariation_7b55j")
text = "Today's Scoreboard"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RefreshButton" parent="Container/HBoxContainer/NinePatchRect/VBoxContainer/Header" instance=ExtResource("2_mpe6q")]
custom_minimum_size = Vector2(0, 0)
layout_mode = 2
theme = ExtResource("3_486ij")
theme_override_constants/icon_max_width = 0
text = ""
icon = ExtResource("7_ly4qf")

[node name="Leaderboard" parent="Container/HBoxContainer/NinePatchRect/VBoxContainer" instance=ExtResource("8_i26w2")]
unique_name_in_owner = true
layout_mode = 2

[node name="Leaderboard2" parent="Container/HBoxContainer/NinePatchRect/VBoxContainer" instance=ExtResource("8_i26w2")]
unique_name_in_owner = true
layout_mode = 2

[node name="Leaderboard3" parent="Container/HBoxContainer/NinePatchRect/VBoxContainer" instance=ExtResource("8_i26w2")]
unique_name_in_owner = true
layout_mode = 2

[node name="Leaderboard4" parent="Container/HBoxContainer/NinePatchRect/VBoxContainer" instance=ExtResource("8_i26w2")]
unique_name_in_owner = true
layout_mode = 2

[node name="Leaderboard5" parent="Container/HBoxContainer/NinePatchRect/VBoxContainer" instance=ExtResource("8_i26w2")]
unique_name_in_owner = true
layout_mode = 2

[node name="right" type="VBoxContainer" parent="Container/HBoxContainer"]
layout_mode = 2

[node name="SeedOfTheDay" type="NinePatchRect" parent="Container/HBoxContainer/right"]
custom_minimum_size = Vector2(0, 85)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.9
texture = ExtResource("9_ajgos")
patch_margin_left = 5
patch_margin_top = 3
patch_margin_right = 5
patch_margin_bottom = 7

[node name="VBoxContainer" type="VBoxContainer" parent="Container/HBoxContainer/right/SeedOfTheDay"]
layout_mode = 0
offset_left = 3.385
offset_right = 95.385
offset_bottom = 79.0

[node name="Label2" type="Label" parent="Container/HBoxContainer/right/SeedOfTheDay/VBoxContainer"]
material = ExtResource("10_iwpgb")
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Seed of the Day"
horizontal_alignment = 1

[node name="NinePatchRect2" type="NinePatchRect" parent="Container/HBoxContainer/right/SeedOfTheDay/VBoxContainer"]
custom_minimum_size = Vector2(0, 19)
layout_mode = 2
texture = ExtResource("11_8lv8c")
region_rect = Rect2(0, 0, 6, 8)
patch_margin_left = 3
patch_margin_top = 5
patch_margin_right = 2
patch_margin_bottom = 2

[node name="Username" type="LineEdit" parent="Container/HBoxContainer/right/SeedOfTheDay/VBoxContainer/NinePatchRect2"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = -6.0
offset_right = -4.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_s84bh")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxEmpty_flqon")
placeholder_text = "Username"
max_length = 9
context_menu_enabled = false

[node name="PlaySeedOfTheDay" parent="Container/HBoxContainer/right/SeedOfTheDay/VBoxContainer" instance=ExtResource("2_mpe6q")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 26)
layout_mode = 2
theme = ExtResource("12_w8u45")
script = ExtResource("13_cggyq")

[node name="panel" type="NinePatchRect" parent="Container/HBoxContainer/right"]
custom_minimum_size = Vector2(98, 0)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.68
texture = ExtResource("9_ajgos")
region_rect = Rect2(0, 0, 11, 11)
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 2
patch_margin_bottom = 7
script = ExtResource("14_rju5d")

[node name="VBoxContainer" type="VBoxContainer" parent="Container/HBoxContainer/right/panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Container/HBoxContainer/right/panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 19)
layout_mode = 2
texture = ExtResource("11_8lv8c")
region_rect = Rect2(0, 0, 6, 8)
patch_margin_left = 3
patch_margin_top = 5
patch_margin_right = 2
patch_margin_bottom = 2
script = ExtResource("14_rju5d")

[node name="SeedInput" type="LineEdit" parent="Container/HBoxContainer/right/panel/VBoxContainer/NinePatchRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = -6.0
offset_right = -4.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_s84bh")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxEmpty_flqon")
placeholder_text = "Seed"
max_length = 12
context_menu_enabled = false

[node name="PlayCustomSeed" parent="Container/HBoxContainer/right/panel/VBoxContainer" instance=ExtResource("2_mpe6q")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 26)
layout_mode = 2
theme = ExtResource("12_w8u45")

[connection signal="text_changed" from="Container/HBoxContainer/right/SeedOfTheDay/VBoxContainer/NinePatchRect2/Username" to="Container/HBoxContainer/right/SeedOfTheDay/VBoxContainer/PlaySeedOfTheDay" method="_on_username_text_changed"]
[connection signal="text_changed" from="Container/HBoxContainer/right/panel/VBoxContainer/NinePatchRect/SeedInput" to="Container/HBoxContainer/right/panel/VBoxContainer/NinePatchRect/SeedInput" method="_on_text_changed"]
